# vertex-ai-pipelines-private-packages

./: .gitignore  README.md
airline_ml/: airport_pipeline.json  cloudbuild.sh  cloudbuild.yaml  example_config.yaml  pyproject.toml  setup_and_run.sh
airline_ml/airline_ml/: pipeline.py
airline_ml/airline_ml/business/: logic.py
airline_ml/airline_ml/trainer/: train.py
